--- a/packages/ui-default/locales/zh.yaml
+++ b/packages/ui-default/locales/zh.yaml
@@ -597,7 +597,7 @@ Recently Created Discussions: 最近创建的讨论
 Recommended: 推荐
 Record {0} not found.: 记录 {0} 不存在。
 record_detail: 记录详情
-record_main: 评测队列
+record_main: 评测记录
 Records: 评测记录
 Refresh Records: 刷新评测记录
 Refresh: 刷新
@@ -868,8 +868,11 @@ You've already claimed this homework.: 您已认领过该作业。
 You've already voted.: 您已经投过票。
 Your permission: 您的权限
 Your role: 您的角色
+Ranking: 排行榜
+By Status: 由评测状态
 
 # HGNUOJ Added
+setting_student: 学生信息
 Stu_ID: 学号
 Stu_ClassName: 专业班级
 Stu_RealName: 姓名
