--- a/packages/ui-default/locales/zh.yaml
+++ b/packages/ui-default/locales/zh.yaml
@@ -884,6 +884,7 @@ Ranking: 排行榜
 # HGNUOJ Added
 user_stu_class: 班级
 stu_class: 班级
+courses_main: 课程
 setting_student: 学生信息
 Stu_ID: 学号
 Stu_ClassName: 专业班级
