--- a/packages/ui-default/locales/zh.yaml
+++ b/packages/ui-default/locales/zh.yaml
@@ -882,8 +882,8 @@ Your role: 您的角色
 Ranking: 排行榜
 
 # HGNUOJ Added
-user_stu_class: 班级
-stu_class: 班级
+stu_class_list: 班级列表
+stu_class_students: 班级详情
 courses_main: 课程
 setting_student: 学生信息
 Stu_ID: 学号
