--- a/packages/ui-default/locales/zh.yaml
+++ b/packages/ui-default/locales/zh.yaml
@@ -893,3 +893,4 @@ Stu_RealName: 姓名
 reg_stuwarn: 请使用真实学生信息填写！
 manage_student_import: 学生批量导入
 manage_teacher_register: 教师注册
+manage_user_changepassword: 修改用户密码
