--- a/packages/ui-default/locales/zh.yaml
+++ b/packages/ui-default/locales/zh.yaml
@@ -647,8 +647,8 @@ RP Algorithm: RP 算法
 Rule: 规则
 Run Pretest: 运行自测
 Run: 运行
-Sample Input: 输入数据
-Sample Output: 输出数据
+Sample Input: 输入样例
+Sample Output: 输出样例
 Save All Changes: 保存所有修改
 Saved session: 已保存的会话
 Saving file...: 正在保存文件...
