--- a/packages/ui-default/locales/zh.yaml
+++ b/packages/ui-default/locales/zh.yaml
@@ -92,8 +92,8 @@ Begin at: 开始于
 Begin Date: 开始日期
 Begin Time: 开始时间
 Belongs to: 属于
-Bio Visibility: 个人简介可见性
-Bio: 个人简介
+Bio Visibility: 奖项认证可见性
+Bio: 奖项认证
 Blog: 博客
 Bold: 加粗
 Boom!: 炸了！
